--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -12,12 +12,14 @@
     }
   },
   "login": {
+    "title": "Connectez vous :",
     "label": {
       "email": "Email :",
       "password": "Mot de passe :"
     }
   },
   "register": {
+    "title": "Inscrivez vous :",
     "label": {
       "email": "Email :",
       "password": "Mot de passe :",
@@ -32,6 +34,8 @@
   "buttons": {
     "login-submit": "Se connecter",
     "register-submit": "S'inscrire",
+    "create-account": "Créer un compte",
+    "already-account": "Vous avez déjà un compte",
     "deconnexion": "Se déconnecter",
     "save": "Sauvegarder"
   },
@@ -57,6 +61,10 @@
             }
           }
         }
+      },
+      "buttons": {
+        "start": "Jouer",
+        "login": "Se connecter"
       }
     },
     "game": {
@@ -64,19 +72,82 @@
         "modal": {
           "title": "Instructions :",
           "list": {
-            "text-1": "Attentez que la caméra s'affiche",
-            "text-2": "Attendez que le pointeur rouge s'affiche",
-            "text-3": "Positionnez votre visage au center du carré dans l'affichage de la caméra (elle deviendra vert lorsque votre visage est détecter)",
-            "text-4": "Calibez votre pointer en cliquant frénétiquement sur les croix bleu et en vous focalisant sur le curseur (Attention! Ne bougez pas votre visage lors du calibrage, seuls vos yeux doivent bouger)",
-            "text-5": "Une fois que votre calibrage vous convient, appuyez sur End Calibrate pour valider vos paramètres"
+            "text-1": "Attendez que le pointeur rouge s'affiche",
+            "text-2": "Calibrez vos points en cliquant plusieur fois sur les hexagones et en vous focalisant sur le curseur de la souris, il deviendra bleu lorsque le point sera calibré.",
+            "text-3": "Une fois que votre calibrage vous convient, appuyez sur Terminé ou recommencer le paramétrage."
           },
-          "message": "Attention! Gardez votre visage dans la même configuration lors vous démarrerez le jeu"
+          "message": "Attention! Gardez votre visage dans la même configuration lorsque vous démarrerez le jeu."
+        },
+        "finish-modal": {
+          "title": "Calibrage terminé",
+          "buttons": {
+            "restart": "Recommencer",
+            "done": "Terminer"
+          }
         },
         "buttons": {
           "exit": "Quitter",
-          "ok": "Quitter"
+          "ok": "Compris",
+          "start": "Commencer"
+        },
+        "loaders": {
+          "camera": "Chargement de la caméra..."
         }
+      },
+      "start": {
+        "game-zone": {
+          "score": "Score : {{score}}"
+        },
+        "lobby": {
+          "title": "Prépare toi",
+          "user-card": {
+            "title": "Top score :",
+            "score": "Mon top 3",
+            "points": "{{score}} points - {{difficulty}} - {{date}}"
+          }
+        }
+      },
+      "ranking": {
+        "table": {
+          "pseudo": "Nom d'utilisateur",
+          "value_score": "Score",
+          "difficulty": "Difficulté",
+          "created_at": "Date"
+        }
+      },
+      "messages": {
+        "save-score": "Vous avez fait {{score}} points. Sauvegarde en cours..."
+      },
+      "buttons": {
+        "resume-game": "Reprendre",
+        "lobby": "Retour au lobby",
+        "calibrate": "Calibrer le suivi des yeux",
+        "ranking": "Classement",
+        "exit-game": "Quitter le jeu",
+        "start-game": "Commencer",
+        "start": "Commencer",
+        "back": "Retour"
       }
+    }
+  },
+  "footer": {
+    "text-rights": "{{app}}™ version {{version}} {{name}}, {{corp}} © . Tous droits réservés."
+  },
+  "message": {
+    "status": {
+      "204": "Succès !"
+    }
+  },
+  "settings": {
+    "difficulty": {
+      "HARD": "DIFFICILE",
+      "NORMAL": "NORMAL",
+      "EASY": "FACILE",
+      "undefined": "Sélectionner la difficulté..."
+    },
+    "pagination": {
+      "next": "Suivant",
+      "previous": "Précédent"
     }
   }
 }
